Завершил с классом ResponseFetchTableNames